CHANGE ShippingCountrySelect - replace placeholder with translation

--- a/resources/views/PageDesign/Components/ShippingCountrySelect.twig
+++ b/resources/views/PageDesign/Components/ShippingCountrySelect.twig
@@ -12,5 +12,5 @@
         </ul>
     </div>
 
-    <div v-else>AUSWAHL NICHT MÖGLICH</div>
+    <div v-else>{{ trans("Ceres::Template.headerChangeDeliveryCountry") }}</div>
 </script>
