--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -36,7 +36,7 @@
             <div class="col-md-5 float-right" v-stick-in-parent>
                 <div class="col-xs-12 p-y-2 bg-white">
                     <hr class="hidden-md-up">
-                    <basket-totals class="m-b-2" template="#vue-basket-totals" :config="{{ ceresConfig.basket.data | json_encode() }}" :show-net-prices="{{ showNetPrices | json_encode }}"></basket-totals>
+                    <basket-totals class="m-b-2" template="#vue-basket-totals" :show-net-prices="{{ showNetPrices | json_encode }}"></basket-totals>
 
                     <hr>
                     <coupon template="#vue-coupon"></coupon>
