--- a/resources/views/PageDesign/Components/ShippingCountrySelect.twig
+++ b/resources/views/PageDesign/Components/ShippingCountrySelect.twig
@@ -1,16 +1,12 @@
 <script type="x/template" id="vue-shipping-country-select">
-    <div v-if="isCountrySelectionEnabled">
-        <ul>
-            <div v-for="shippingCountry in localization.shippingCountries">
-                <li :class="{'active': localization.shippingCountryId == shippingCountry.id}">
-                    <a data-toggle="collapse" href="#countrySettings" @click="setShippingCountry(shippingCountry.id)" :class="{'is-disabled': selectable}" :disabled="selectable">
-                        <i :class="'flag-icon flag-icon-' + shippingCountry.isoCode2.toLowerCase()"></i>
-                        ${shippingCountry.currLangName}
-                    </a>
-                </li>
-            </div>
-        </ul>
-    </div>
-
-    <div v-else>{{ trans("Ceres::Template.headerChangeDeliveryCountry") }}</div>
+    <ul>
+        <div v-for="shippingCountry in localization.shippingCountries">
+            <li :class="{'active': localization.shippingCountryId == shippingCountry.id}">
+                <a data-toggle="collapse" href="#countrySettings" @click="setShippingCountry(shippingCountry.id)" :class="{'is-disabled': !isCountrySelectionEnabled}" :disabled="!isCountrySelectionEnabled" v-tooltip="!isCountrySelectionEnabled" data-placement="top" title="{{ trans("Ceres::Template.headerChangeDeliveryCountry") }}">
+                    <i :class="'flag-icon flag-icon-' + shippingCountry.isoCode2.toLowerCase()"></i>
+                    ${shippingCountry.currLangName}
+                </a>
+            </li>
+        </div>
+    </ul>
 </script>
