FIX bank data select button styling

--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -40,15 +40,13 @@
                                 -->
                                 <div class="item-controls">
                                     <span class="item-edit" @click.prevent="openUpdateBank(index, bankData)">
-                                        <button class="btn btn-primary btn-medium" @click.prevent="openUpdateBank(index, bankData)">
+                                        <button v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.myAccountEdit") }}" class="btn btn-primary btn-medium" @click.prevent="openUpdateBank(index, bankData)">
                                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                            {{ trans("Ceres::Template.myAccountEdit") }}
                                         </button>
-                                    </span><!--
-                                --><span class="item-remove" @click.prevent="openDeleteBank(index, bankData)">
-                                        <button class="btn btn-medium btn-remove-address" @click.prevent="openDeleteBank(index, bankData)">
+                                    </span>
+                                    <span class="item-remove" @click.prevent="openDeleteBank(index, bankData)">
+                                        <button v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.myAccountDelete") }}" class="btn btn-medium btn-remove-address" @click.prevent="openDeleteBank(index, bankData)">
                                             <i class="fa fa-times" aria-hidden="true"></i>
-                                            {{ trans("Ceres::Template.myAccountDelete") }}
                                         </button>
                                     </span>
                                 </div>
