FIX AcceptGtcCheck - href for cacellation rights

--- a/resources/views/Checkout/Components/AcceptGtcCheck.twig
+++ b/resources/views/Checkout/Components/AcceptGtcCheck.twig
@@ -9,7 +9,7 @@
             -->{% endset %}
 
             {% set cancellationContent %}<!--
-                --><a href="{{ urls.canellationRights }}" target="_blank">
+                --><a href="{{ urls.cancellationRights }}" target="_blank">
                     <strong>{{ trans("Ceres::Template.checkoutCancellationRight", {"hyphen": "&shy;"}) }}</strong>
                 </a><!--
             -->{% endset %}
