--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -8,12 +8,11 @@
 
     {{ Twig.set("slide", "{ }") }}
 
-    {% set mobileParam = param.mobile %}
     {% set pushCurrentSlide = false %}
 
-    {% if mobileParam.categoryId | trim is not empty %}
+    {% if param.categoryId.mobile | trim is not empty %}
 
-        {{ Twig.set("category", Twig.call("services.category.get", [mobileParam.categoryId])) }}
+        {{ Twig.set("category", Twig.call("services.category.get", [param.categoryId.mobile])) }}
         {{ Twig.set("categoryUrl", Twig.call("services.category.getURL", ["$category"]) ) }}
 
         {{ Twig.set("slide", "slide | merge({ name: category.details[0].name })") }}
@@ -22,9 +21,9 @@
 
         {% set pushCurrentSlide = true %}
 
-    {% elseif mobileParam.variationId | trim is not empty %}
+    {% elseif param.variationId.mobile | trim is not empty %}
 
-        {{ Twig.set("itemData", Twig.call("services.itemLoader.loadForTemplate", ["Ceres::Homepage.Homepage", itemLoaderPresets.items, { variationIds: [mobileParam.variationId] }])) }}
+        {{ Twig.set("itemData", Twig.call("services.itemLoader.loadForTemplate", ["Ceres::Homepage.Homepage", itemLoaderPresets.items, { variationIds: [param.variationId.mobile] }])) }}
         {{ Twig.set("itemData", "itemData.documents[0].data") }}
         {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
 
@@ -40,9 +39,9 @@
 
     {% endif %}
 
-    {% if mobileParam.customImagePath | trim is not empty %}
+    {% if param.customImagePath.mobile | trim is not empty %}
 
-        {{ Twig.set("slide", "slide | merge({ imageUrl: #{ mobileParam.customImagePath | json_encode } })") }}
+        {{ Twig.set("slide", "slide | merge({ imageUrl: #{ param.customImagePath.mobile | json_encode } })") }}
 
         {% set pushCurrentSlide = true %}
 
