fix trailing slash in language select

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -156,7 +156,7 @@
                                 <ul>
                                     {% for language in languageList %}
                                         <li{% if lang == language %} class="active"{% endif %}>
-                                            <a href="{% if languageUrls[language] is defined %}{{ languageUrls[language] ~ queryString() }}{% else %}/{{ language }}{% endif %}{{ urls.trailingSlashSuffix }}" data-update-url>
+                                            <a href="{% if languageUrls[language] is defined %}{{ languageUrls[language] ~ queryString() }}{% else %}/{{ language }}{{ urls.trailingSlashSuffix }}{% endif %}" data-update-url>
                                                 <i class="flag-icon flag-icon-{{ language }}"></i>
                                                 {{ trans("Ceres::Template.header" ~ language | capitalize) }}
                                             </a>
