--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -142,3 +142,15 @@ a:active {
 .border-radius-0 {
     border-radius: 0;
 }
+
+@include media-breakpoint-down(xs){
+    .only-button-mobile {
+        width: 2.2rem !important;
+        padding-right: 8px;
+        height: 2.2rem;
+
+        & span {
+            font-size: 0;
+        }
+    }
+}
