--- a/resources/scss/ceres/common/_buttons.scss
+++ b/resources/scss/ceres/common/_buttons.scss
@@ -185,3 +185,30 @@ button:focus {
 		}
 	}
 }
+
+// Responsive button text and icon visibility
+
+@each $bp in map-keys($grid-breakpoints) {
+	.btn-only-icon-#{$bp}-up {
+	  @include media-breakpoint-up($bp) {
+		width: 2.2rem !important;
+        padding-right: 8px;
+        height: 2.2rem;
+
+        & span {
+            display: none !important;
+        }
+	  }
+	}
+	.btn-only-icon-#{$bp}-down {
+	  @include media-breakpoint-down($bp) {
+		width: 2.2rem !important;
+        padding-right: 8px;
+        height: 2.2rem;
+
+        & span {
+            display: none !important;
+        }
+	  }
+	}
+  }
