ADD show new prices to the basket module and update it on AfterBasketChanged

--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -148,7 +148,7 @@
                             <aside class="sidebar">
                                 <div class="cmp cmp-checkout-sidebar">
                                     {{ LayoutContainer.show("Ceres::Checkout.BeforeBasketTotals") }}
-                                    <basket-totals template="#vue-basket-totals" :show-net-prices="{{ showNetPrices | json_encode }}"></basket-totals>
+                                    <basket-totals template="#vue-basket-totals"></basket-totals>
                                     {{ LayoutContainer.show("Ceres::Checkout.AfterBasketTotals") }}
                                 </div>
                             </aside>
