--- a/resources/views/Basket/Components/BasketPreviewHover.twig
+++ b/resources/views/Basket/Components/BasketPreviewHover.twig
@@ -27,7 +27,7 @@
                         </div>
                     </div>
 
-                    <basket-totals template="#vue-basket-totals" :show-net-prices="{{ showNetPrices | json_encode }}"></basket-totals>
+                    <basket-totals template="#vue-basket-totals"></basket-totals>
 
                     <div class="row">
                             <div class="col-xs-6">
